# fastapi-nextjs

./: README.md  pyproject.toml
fastapi_nextjs/: package-lock.json  package.json
fastapi_nextjs/api/: main.py
fastapi_nextjs/app/: page.tsx
tests/: test_main.py
